--- a/cover_page.css
+++ b/cover_page.css
@@ -10,6 +10,26 @@ th{
     font-variant: small-caps;
     font-family: sans-serif;
 }
+form.view button{
+    position: absolute;
+    top: 250px;
+    right: 572px;
+    width: 150px; 
+    height: 50px;
+    cursor: pointer;
+    border-color: white;
+    border-radius: 15px;
+    border-style: solid ;
+    border-width: 3px;
+    background-color:limegreen;
+    color: white;
+    font-size: medium;
+    font-weight: bold;
+    text-align: center;
+}
+form.view button:hover{
+    background-color: darkgreen;
+}
 form.links button{
     height: 40px;
     width: 75px;
